--- a/templates/_base.html
+++ b/templates/_base.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 	<head>
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -17,6 +17,10 @@
 			rel="stylesheet"
 			integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
 			crossorigin="anonymous"
+		/>
+    <link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
 		/>
 
 		<link rel="stylesheet" href="{% static 'css/base.css' %}" />
@@ -47,8 +51,9 @@
 							<a class="nav-link" href="{% url 'about' %}">About</a>
 						</li>
 					</ul>
+          <div class="mr-auto">
+
 					{% if user.is_authenticated %}
-					<div class="mr-auto">
 						<ul class="navbar-nav">
 							<li class="nav-item dropdown">
 								<a
@@ -70,15 +75,18 @@
 								</ul>
 							</li>
 						</ul>
-					</div>
 					{% else %}
-					<div class="mr-auto">
 						<form class="form d-flex">
 							<a href="{% url 'account_login' %}" class="btn btn-outline-secondary">Log in</a>
 							<a href="{% url 'account_signup' %}" class="btn btn-primary ml-2">Sign up</a>
 						</form>
-					</div>
 					{% endif %}
+          </div>
+          <div class="mr-auto text-end">
+            <button id="dark-mode-button" class="btn" type="button">
+              <i class="bi bi-sun"></i>
+            </button>
+          </div>
 				</div>
 			</div>
 		</nav>
