--- a/templates/_base.html
+++ b/templates/_base.html
@@ -18,10 +18,7 @@
 			integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
 			crossorigin="anonymous"
 		/>
-    <link
-			rel="stylesheet"
-			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-		/>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
 
 		<link rel="stylesheet" href="{% static 'css/base.css' %}" />
 		{% endblock %}
@@ -51,42 +48,46 @@
 							<a class="nav-link" href="{% url 'about' %}">About</a>
 						</li>
 					</ul>
-          <div class="mr-auto">
-
-					{% if user.is_authenticated %}
-						<ul class="navbar-nav">
-							<li class="nav-item dropdown">
-								<a
-									class="nav-link dropdown-toggle"
-									href="#"
-									role="button"
-									data-bs-toggle="dropdown"
-									aria-expanded="false"
-								>
-									Settings
-								</a>
-								<ul class="dropdown-menu dropdown-menu-end">
-									<li><a class="dropdown-item" href="#">{{ user.email }}</a></li>
-									<li>
-										<hr class="dropdown-divider" />
-									</li>
-									<li><a class="dropdown-item" href="{% url 'account_change_password' %}">Change password</a></li>
-									<li><a class="dropdown-item" href="{% url 'account_logout' %}">Sign out</a></li>
-								</ul>
-							</li>
-						</ul>
-					{% else %}
-						<form class="form d-flex">
-							<a href="{% url 'account_login' %}" class="btn btn-outline-secondary">Log in</a>
-							<a href="{% url 'account_signup' %}" class="btn btn-primary ml-2">Sign up</a>
-						</form>
-					{% endif %}
-          </div>
-          <div class="mr-auto text-end">
-            <button id="dark-mode-button" class="btn" type="button">
-              <i class="bi bi-sun"></i>
-            </button>
-          </div>
+					<div class="d-flex justify-content-between flex-grow-1 flex-lg-grow-0">
+						<!-- User authentication -->
+						{% if user.is_authenticated %}
+						<div class="d-inline-flex" id="user-authentication-info">
+							<ul class="navbar-nav">
+								<li class="nav-item dropdown">
+									<a
+										class="nav-link dropdown-toggle"
+										href="#"
+										role="button"
+										data-bs-toggle="dropdown"
+										aria-expanded="false"
+									>
+										Settings
+									</a>
+									<ul class="dropdown-menu dropdown-menu-end">
+										<li><a class="dropdown-item" href="#">{{ user.email }}</a></li>
+										<li>
+											<hr class="dropdown-divider" />
+										</li>
+										<li><a class="dropdown-item" href="{% url 'account_change_password' %}">Change password</a></li>
+										<li><a class="dropdown-item" href="{% url 'account_logout' %}">Sign out</a></li>
+									</ul>
+								</li>
+							</ul>
+						</div>
+						{% else %}
+						<div class="d-inline-flex" id="user-authentication-info">
+							<form class="form">
+								<a href="{% url 'account_login' %}" class="btn btn-outline-secondary">Log in</a>
+								<a href="{% url 'account_signup' %}" class="btn btn-primary ml-2">Sign up</a>
+							</form>
+						</div>
+						{% endif %}
+						<div class="ms-lg-3">
+							<button id="dark-mode-button" class="btn text-end" type="button">
+								<i class="bi bi-sun"></i>
+							</button>
+						</div>
+					</div>
 				</div>
 			</div>
 		</nav>
